// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rich link previews should display a rich preview when data is available 1`] = `
.emotion-2 {
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  display: -webkit-box;
  overflow: hidden;
  color: #000;
  line-height: 1.2;
  margin: 0;
  font-size: calc((13 / 13) * 13px);
  font-weight: normal;
}

.emotion-0 {
  width: 1.4em;
  height: 1.4em;
  margin: -0.2em 0.1em 0;
  vertical-align: middle;
  fill: currentColor;
}

<div
  aria-label="Currently selected"
  aria-selected="true"
  class="block-editor-link-control__search-item is-current is-rich is-preview"
>
  <div
    class="block-editor-link-control__search-item-top"
  >
    <span
      class="block-editor-link-control__search-item-header"
    >
      <span
        class="block-editor-link-control__search-item-icon is-image"
      >
        <img
          alt=""
          src="https://s.w.org/favicon.ico?2"
        />
      </span>
      <span
        class="block-editor-link-control__search-item-details"
      >
        <a
          class="components-external-link block-editor-link-control__search-item-title"
          href="https://www.wordpress.org"
          rel="external noreferrer noopener"
          target="_blank"
        >
          Blog Tool, Publishing Platform, and CMS — WordPress.org
          <span
            class="components-visually-hidden"
          >
            (opens in a new tab)
          </span>
          <svg
            aria-hidden="true"
            class="components-external-link__icon emotion-0 emotion-1"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
            />
          </svg>
        </a>
        <span
          class="block-editor-link-control__search-item-info"
        >
          wordpress.org
        </span>
      </span>
    </span>
    <button
      class="components-button block-editor-link-control__search-item-action is-secondary"
      type="button"
    >
      Edit
    </button>
  </div>
  <div
    class="block-editor-link-control__search-item-bottom"
  >
    <div
      aria-hidden="false"
      class="block-editor-link-control__search-item-image"
    >
      <img
        alt=""
        src="https://s.w.org/images/home/screen-themes.png?3"
      />
    </div>
    <div
      aria-hidden="false"
      class="block-editor-link-control__search-item-description"
    >
      <span
        class="components-truncate components-text emotion-2 emotion-3 emotion-4"
        data-wp-c16t="true"
        data-wp-component="Text"
      >
        Open source software which you can use to easily create a beautiful website, blog, or app.
      </span>
    </div>
  </div>
</div>
`;

exports[`Rich link previews should not fetch or display rich previews by default 1`] = `
.emotion-0 {
  width: 1.4em;
  height: 1.4em;
  margin: -0.2em 0.1em 0;
  vertical-align: middle;
  fill: currentColor;
}

<div
  aria-label="Currently selected"
  aria-selected="true"
  class="block-editor-link-control__search-item is-current is-preview"
>
  <div
    class="block-editor-link-control__search-item-top"
  >
    <span
      class="block-editor-link-control__search-item-header"
    >
      <span
        class="block-editor-link-control__search-item-icon"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          role="img"
          viewBox="-2 -2 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 0C4.03 0 0 4.03 0 9s4.03 9 9 9 9-4.03 9-9-4.03-9-9-9zM1.11 9.68h2.51c.04.91.167 1.814.38 2.7H1.84c-.403-.85-.65-1.764-.73-2.7zm8.57-5.4V1.19c.964.366 1.756 1.08 2.22 2 .205.347.386.708.54 1.08l-2.76.01zm3.22 1.35c.232.883.37 1.788.41 2.7H9.68v-2.7h3.22zM8.32 1.19v3.09H5.56c.154-.372.335-.733.54-1.08.462-.924 1.255-1.64 2.22-2.01zm0 4.44v2.7H4.7c.04-.912.178-1.817.41-2.7h3.21zm-4.7 2.69H1.11c.08-.936.327-1.85.73-2.7H4c-.213.886-.34 1.79-.38 2.7zM4.7 9.68h3.62v2.7H5.11c-.232-.883-.37-1.788-.41-2.7zm3.63 4v3.09c-.964-.366-1.756-1.08-2.22-2-.205-.347-.386-.708-.54-1.08l2.76-.01zm1.35 3.09v-3.04h2.76c-.154.372-.335.733-.54 1.08-.464.92-1.256 1.634-2.22 2v-.04zm0-4.44v-2.7h3.62c-.04.912-.178 1.817-.41 2.7H9.68zm4.71-2.7h2.51c-.08.936-.327 1.85-.73 2.7H14c.21-.87.337-1.757.38-2.65l.01-.05zm0-1.35c-.046-.894-.176-1.78-.39-2.65h2.16c.403.85.65 1.764.73 2.7l-2.5-.05zm1-4H13.6c-.324-.91-.793-1.76-1.39-2.52 1.244.56 2.325 1.426 3.14 2.52h.04zm-9.6-2.52c-.597.76-1.066 1.61-1.39 2.52H2.65c.815-1.094 1.896-1.96 3.14-2.52zm-3.15 12H4.4c.324.91.793 1.76 1.39 2.52-1.248-.567-2.33-1.445-3.14-2.55l-.01.03zm9.56 2.52c.597-.76 1.066-1.61 1.39-2.52h1.76c-.82 1.08-1.9 1.933-3.14 2.48l-.01.04z"
          />
        </svg>
      </span>
      <span
        class="block-editor-link-control__search-item-details"
      >
        <a
          class="components-external-link block-editor-link-control__search-item-title"
          href="https://www.wordpress.org"
          rel="external noreferrer noopener"
          target="_blank"
        >
          Wordpress.org
          <span
            class="components-visually-hidden"
          >
            (opens in a new tab)
          </span>
          <svg
            aria-hidden="true"
            class="components-external-link__icon emotion-0 emotion-1"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
            />
          </svg>
        </a>
        <span
          class="block-editor-link-control__search-item-info"
        >
          wordpress.org
        </span>
      </span>
    </span>
    <button
      class="components-button block-editor-link-control__search-item-action is-secondary"
      type="button"
    >
      Edit
    </button>
  </div>
</div>
`;
